--- a/src/styles/scss/Header.scss
+++ b/src/styles/scss/Header.scss
@@ -1,36 +1,243 @@
 @import 'variables';
+@import 'mixins';
 
-.Header {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    background-color: rgba($color: #2b2a2a, $alpha: 0.9);
+.Header{
     color: white;
-    height: 130px;
-    z-index: 2;
+    position: fixed;
+    z-index: 3;
+    .upperH{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgba($color: $backgroundColor, $alpha: 0.7);
+        height: 100px;
+        width: 100vw;
+        z-index: 3;
+        &>span{
+            margin-left: 10%;
+            width: 140px;
+            
+        }
+
+        .mobile-btn-container{
+            margin-right: 10%;
+            
+            &>button{
+                @include forBtns(70px, 70px, 10px);
+                border: none;
+                background-color: rgba($color: #000000, $alpha: 0.1);
+            }
+        }
+    }
+
+    .bottomH{
+        display: none;
+    }
+
+    .btn-container {
+        display: none;
+        &>button{
+            visibility: hidden;
+        }
+    }
+
+
+    
+    @include breakpoints(mobileP) {
+        
+            .upperH {
+                .btn-container > button {
+                    
+                }
+            }
+            .bottomH {
+                .btn-container > button{
+                    
+                }
+            }
+        
+    }
 }
 
-.upperH{
-    padding-left: 20px;
-    display: flex;
-    align-items: center;
-    background-color: rgba($color: #2b2a2a, $alpha: 1);
-    height: 80px;
-}
-
-.bottomH{
-    display: flex;
-    align-content: center;
-    padding-left: 20px;
-    nav{
-        position: absolute;
-        right: 10px;
+.mobile-menu{
+    position: absolute;
+    @include centerFlexCol(10px);
+    background-color: $backgroundColor;
+    padding-top: 10px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0.6s ease-in 400ms, opacity 200ms;
+    
+    .mobile-menu-btn {
+        @include centerFlexCol(20px);
+        width: 100vw;
+        height: 180px;
+        &>a{
+            @include centerFlexCol(0px);
+            height: 60px;
+            width: 80%;
+            outline: #32a2ce solid 2px;
+            border: none;
+            border-radius: 10px;
+            background-color: rgba($color: #000000, $alpha: 0.3);
+            &:hover, :focus{
+                background-color: rgba($color: #163337, $alpha: 0.6);
+                color: white;
+            }
+        }
     }
 
     ul{
-        display: flex;
-        flex-direction:  row;
-        justify-content: flex-end;
-        gap: 20px;
+        @include centerFlexCol(0px);
+        width: 100%;
+        &>li{
+            width: 100%;
+            height: 80px;
+            
+            &>a{
+                @include centerFlexCol(0px);
+                height: 100%;
+                width: 100%;
+                &:hover, :focus{
+                    background-color: rgb(56, 54, 54);
+                    color: white;
+                }
+            }
+        }
+    }
+
+    .menu-close-btn{
+        @include forBtns(60px, 80px, 0px);
+        border: none;
+        background-color: $backgroundColor;
+        
+        &:hover,:focus{
+            background-color: #32a2ce;
+            &>svg{
+                color: black;
+            }
+        }
     }
 }
+
+.hide {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.6s ease-out 300ms, opacity 400ms;
+}
+
+.visible-header{
+    .upperH{
+        background-color: rgba($color: $backgroundColor, $alpha: 1.0);
+    }
+}
+
+
+
+
+// .Header {
+//     position: absolute;
+//     top: 0;
+//     width: 100%;
+//     z-index: 2;
+    
+//     button {
+//         height: 50px;
+//         width: 120px;
+//         padding: 5px;
+//         background-color: rgba(0, 0, 0, 0.3);
+//         border-radius: 30px;
+//         color: white;
+//         border: none;
+//     }
+
+//     .sign-in {
+//         outline: solid #5959fa;
+//     }
+//     .register{
+//         background-color: rgba(98, 130, 255, 0.4);
+        
+//         &:hover , &:focus{
+
+//         }
+//     }
+
+//     .upperH{
+//         color: white;
+//     }
+    
+//     .bottomH{
+//         display: flex;
+//         justify-content: flex-end;
+//         align-items: center;
+//         ul {
+//             display: flex;
+//             gap: 10px; 
+//         }
+//     }
+//     .button-container{
+//         display: flex;
+//         justify-content: flex-end;
+//         color: black;
+//         gap: 10px;
+//     }
+// }
+
+// .visible-header {
+
+//     .bottomH {
+//         display: flex;
+//         justify-content: space-between;
+//         position: fixed;
+//         top: 0;
+//         background-color: rgba($color: $backgroundColor, $alpha: 1.0);
+//         width: 100%;
+//         height: 100px;
+//         z-index: 100;
+//         nav{
+//             margin-right: 10%;
+//         }
+
+//         .button-container{
+//             margin-left: 10%;
+//         }
+//     }
+// }
+
+
+// .divisible-header {
+//     .upperH{
+//         background-color: rgba($color: $backgroundColor, $alpha: 0.5);
+//         color: rgb(255, 255, 255);
+//         padding: 10px;
+//         height: 80px;
+//         display: flex;
+//         align-items: center;
+//         justify-content: space-between;
+//     }
+//     .bottomH{
+//         top: 0;
+//         height: 100px;
+//         background-color: rgba($color: $backgroundColor, $alpha: 0.3);
+//         nav{
+//             margin-right: 10%;
+//             ul{
+//                 gap: 20px;
+//             }
+//         }
+//         a{
+//             color: rgb(255, 255, 255);
+//         }
+//         button{
+//             visibility: hidden;
+//         }
+        
+
+//     }
+// }
