Chores: Added responsive design. TODO Refactor usage of redux

--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -5,7 +5,7 @@
     //background-color: rgb(74, 74, 74);
     .img-carousel-container {
         img{
-            height: 600px;
+            height: 600px!important;
             width: 100%;
             object-fit: cover!important;
             object-position: center!important;
