--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -3,4 +3,5 @@
 $primaryFont : 'Open Sans', sans-serif;
 
 $backgroundColor : #343434;
-
+$backgroundCompanyTheme : #0089d2;
+$divisibleFontColor : #00ff1a;
