--- a/src/styles/scss/Home.scss
+++ b/src/styles/scss/Home.scss
@@ -1,51 +1,73 @@
 @import 'variables';
-
+@import 'mixins';
 
 .Home{
-    main {
+    display: grid;
+    grid-template-rows: 30% 50% 20%;
+    align-items: center;
+    width: 100vw; 
+    h2{
+        font-size: 2rem;
         
     }
-}
 
-
-
-
-// .Home {
-//     height: 220vh;
-//     width: 100vw;
-//     section{
-//     span {
-//             a{
-//                 color: #4c94ff;
-//             }
-//         }
-//     }
-//     .home-container{
-//         display: grid;
-//         grid-template-columns: 100;
-//         place-content: center;
-        
-//     }
-//     main {
-//         height: 80%;
-//         width: 70%;
-//         margin-top: 10px;
-//         padding: 20px;
-//         right: 50%;
-//         transform: translateX(20%);
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         align-items: center;
-//         border-left: 0.5px solid rgba($color: #000000, $alpha: 0.4);
-//         border-right: 0.5px solid rgba($color: #000000, $alpha: 0.4);
-        
-//     }
-// }
-
-@media screen {
     
+
+    @include breakpoints(mobileP){
+        
+
+        main {
+            color: white;
+            margin-top: 10%;
+            margin-bottom: 10%;
+            .article-1{
+                background-color: $backgroundCompanyTheme;
+            }
+
+            .article-2{
+                margin-top: 10%;
+                background-color: #189c1d;
+            }
+            
+            article{   
+                padding: 15px;
+                p{
+                    font-weight: 600;
+                }
+                h2 {
+                    font-weight: 700;
+                }
+                img{
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+
+    @include breakpoints(mobileL){
+        .mobile-content-container {
+            @include centerFlexCol(4px);
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-top: 5px;
+        }
+    }
+
+    @include breakpoints(tabletP){
+        .page-container{
+            display: flex;
+        
+            main{
+                margin-top: 3%;
+                margin-bottom: 0%;
+                width: 80%;   
+                padding: 0;
+            }
+        }
+
+
+    }
+    //@include breakpoints
 }
-
-
-
