--- a/src/styles/scss/Home.scss
+++ b/src/styles/scss/Home.scss
@@ -5,7 +5,8 @@
     display: grid;
     grid-template-rows: 30% 50% 20%;
     align-items: center;
-    width: 100vw; 
+    width: 100vw;
+    font-family: $primaryFont;
     h2{
         font-size: 2rem;
         
@@ -58,7 +59,6 @@
     @include breakpoints(tabletP){
         .page-container{
             display: flex;
-        
             main{
                 margin-top: 3%;
                 margin-bottom: 0%;
@@ -66,8 +66,26 @@
                 padding: 0;
             }
         }
+    }
 
+    
 
+    @include breakpoints(LaptopWithMdpi){
+        .mobile-content-container{
+            padding: 0;
+            margin: 0;
+            justify-content: flex-start;
+        }
+        main{
+            margin: 0;
+            
+            article>img{
+                align-self: center;
+            }
+            &>article>h2{
+                text-align: center;
+            }
+        }
     }
     //@include breakpoints
 }
