--- a/src/styles/scss/sidePanel.scss
+++ b/src/styles/scss/sidePanel.scss
@@ -6,12 +6,114 @@
     background-color: rgba($color: #0070ac, $alpha: 1);
     color: white;
     margin-bottom: 2%;
+    
+    .container-home-panel{
+        
+        section {
+            padding: 10px;
+        }
+    }
+    
+    
+
     @include breakpoints(mobileP) {
+        width: 100vw;
+        height: 400px;
+        display: flex;
+        overflow: auto;
+        scroll-snap-type: x mandatory;
+        scroll-snap-align: start;
         border-top: #000000 solid 2px;
+        
+        .container-home-panel{
+            h2{
+                font-size: 18px;
+            }
+            h3{
+                font-size: 14px;
+            }
+
+            .newsletter-panel{
+                @include centerFlexCol(2px);
+            }
+            .newsletter-panel > p{
+                width: 340px;
+                height: 100%;
+                @include truncateArticle(5);
+            }
+
+            .feature-panel{
+                @include centerFlexCol(0px);
+                img{
+                    width: 340px;
+                    height: 250px;
+                }
+
+                p{
+                    @include truncateArticle(3)
+                }
+            }
+            
+        }
+        
     }
     @include breakpoints(tabletP){
         height: 100vh;
         margin-bottom: 0;
     }
+    @include breakpoints(tabletL){
+        height: 100%;
+        width: 400px;
+        margin-bottom: 0;
+        .container-home-panel{
+            width: 300px;
+            .feature-panel{
+                p{
+                    @include truncateArticle(2);
+                }
+            }
 
+            &>.feature-panel>img{
+                height: 250px;
+                width: 250px;
+            }
+            section{
+                height: 450px;
+            }
+        }
+    }
+
+    @include breakpoints(LaptopWithMdpi){
+        background-color: white;
+        padding-left: 1.5%;
+        margin-bottom: 2%;
+        border-left: solid 1px black;
+        margin-top: 2%;
+        
+        .container-sidepanel{
+            width: 100%;
+            height: 100%;
+            background-color: $backgroundCompanyTheme;
+        }
+
+        .container-home-panel{
+            section{
+                @include centerFlexCol(5px);
+                p{
+                    padding: 10px;
+                }
+            }
+            section>img{
+                width: 250px;
+                height: 250px;
+            }
+        }
+
+    }
+    
+    @include breakpoints(Laptop){
+        background-color: white;
+
+    }
+    
 }
